--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <bpdy>
         <h1>
-            系統登入頁面
+            祐肯請假系統登入頁面
         </h1>
         <input type = " text" id = "cod" placeholder = "請輸入編號" />
         <br>
