--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="script.js">
-        </script>
+        <script src="script.js"></script>
+		<link rel="stylesheet" href="style.css">
     </head>
     <bpdy>
         <h1>
