--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="script.js"></script>
 		<link rel="stylesheet" href="style.css">
     </head>
-    <bpdy>
+    <body>
         <h1>
             祐肯請假系統登入頁面
         </h1>
@@ -18,5 +18,5 @@
             登入
         </button>
 
-    </bpdy>
+    </body>
 </html>
