--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
         <script src="script.js"></script>
 		<link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1>
-            祐肯請假系統登入頁面
-        </h1>
-        <input type = " text" id = "cod" placeholder = "請輸入編號" />
-        <br>
-        <br>
-        <input type = " text" id = "pw" placeholder = "請輸入密碼" />
-        <br>
-        <br>
-        <button onclick="getValue()">
-            登入
-        </button>
+	<div>
+		<body>
+			<h1>
+				祐肯請假系統登入頁面
+			</h1>
+			<input type = " text" id = "cod" placeholder = "請輸入編號" />
+			<br>
+			<br>
+			<input type = " text" id = "pw" placeholder = "請輸入密碼" />
+			<br>
+			<br>
+			<button onclick="getValue()">
+				登入
+			</button>
 
-    </body>
+		</body>
+	</div>
 </html>
