--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<h1>
 				祐肯請假系統登入頁面
 			</h1>
-			<input type = "text" id = "cod" placeholder = "請輸入編號" />
+			<input type = "text" id = "code" placeholder = "請輸入編號" />
 			<br>
 			<br>
 			<input type = "text" id = "pw" placeholder = "請輸入密碼" />
