手機顯示問題處理完畢

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 	<body>
-		<div>
-			<h1>
-				祐肯請假系統登入頁面
-			</h1>
-			<input type = "text" id = "code" placeholder = "請輸入編號" />
-			<br>
-			<br>
-			<input type = "text" id = "pw" placeholder = "請輸入密碼" />
-			<br>
-			<br>
-			<button onclick="getValue()">
-				登入
-			</button>
+		<div class="fullscreen">
+			<div class="field">
+				<h1>
+					祐肯請假系統登入頁面
+				</h1>
+				<input type = "text" id = "code" placeholder = "請輸入編號" />
+				<br>
+				<br>
+				<input type = "text" id = "pw" placeholder = "請輸入密碼" />
+				<br>
+				<br>
+				<button onclick="getValue()">
+					登入
+				</button>
+			</div>
 		</div>
 	</body>
 	
