更改資料架構並新增自動重新導向

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <bpdy>
+	<head>
+		<script src="script.js"></script>
+	</head>
+    <body>
         <h1>
             主管審核專區
         </h1>
         
-    </bpdy>
+    </body>
 </html>
