--- a/employee/employee.html
+++ b/employee/employee.html
@@ -10,8 +10,18 @@
 			<h1>
 				員工請假專區
 			</h1>
-			<button id="viewdata" onclick="viewData()">查看請假紀錄</button>
-			<button id="newdayoff" onclick="newdayoff()">請假</button>
+			<div class="btndiv" id="viewDataDiv">
+				<p>查看請假紀錄</p><br>
+				<button class="menubtn" id="viewdata" onclick="viewData()" >
+					<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
+				</button>
+			</div>
+			<div class="btndiv" id="newDayOffDiv">
+				<p>請假</p><br>
+				<button class="menubtn" id="newdayoff" onclick="newdayoff()">
+					<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
+				</button>
+			</div>
 		</div>
     </body>
 </html>
