--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="script.js"></script>
 		<link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="/img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 	<body>
