--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>祐肯請假系統</title>
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
 		<script src="script.js"></script>
 	</head>
     <body>
