--- a/employee/employee.html
+++ b/employee/employee.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
+		<title>祐肯請假系統</title>
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="script.js"></script>
 	</head>
