--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <script src="script.js"></script>
+		<title>祐肯請假系統</title>
 		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/x-icon" href="/img/logo.ico">
+		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 	<body>
