--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 		<div class="fullscreen">
 			<div class="field">
 				<h1>
-					祐肯企業
+					祐肯請假系統登入頁面
 				</h1>
-				<h2>
-					請假系統
 				</h2>
 				<input type = "text" id = "code" placeholder = "請輸入編號" />
 				<br>
