--- a/employee/employee.html
+++ b/employee/employee.html
@@ -5,6 +5,7 @@
 		<title>祐肯請假系統</title>
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="js/jquery-3.7.1.min.js"></script>
 		<script src="script.js"></script>
 	</head>
     <body>
