--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="script.js"></script>
+        <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/script.js"></script>
 		<title>祐肯請假系統</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
@@ -22,7 +23,7 @@
 				<input type = "text" id = "pw" placeholder = "輸入密碼" />
 				<br>
 				<br>
-				<button onclick="getValue()">
+				<button id="login">
 					登入
 				</button>
 			</div>
