--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="js/jquery-3.7.1.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="js/loginPage.js"></script>
 		<title>祐肯請假系統</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
