--- a/employee/employee.html
+++ b/employee/employee.html
@@ -5,8 +5,8 @@
 		<title>祐肯請假系統</title>
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="js/jquery-3.7.1.min.js"></script>
-		<script src="script.js"></script>
+        <script src="../js/jquery-3.7.1.min.js"></script>
+		<script src="../js/employeePage.js"></script>
 	</head>
     <body>
 		<div id="full">
