Put Css files in order, added register page

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>祐肯請假系統</title>
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
-		<script src="script.js"></script>
+        <script src="../js/jquery-3.7.1.min.js"></script>
+		<script src="../js/adminMain.js"></script>
 	</head>
     <body>
         <h1>
