--- a/employee/employee.html
+++ b/employee/employee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../css/employee.css">
 		<title>祐肯請假系統</title>
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
