--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 					<input type = "password" id = "pw" placeholder = "輸入密碼" />
 				</div>
 				<div class="inputs">
-					<button id="login">
-						登入
-					</button>
+					<button class="glow-on-hover" id="login">登入</button>
 				</div>
 			</div>
 			<div id="version">
