--- a/admin/Addnewemployees.html
+++ b/admin/Addnewemployees.html
@@ -9,17 +9,14 @@
 	</head>
     <body>
         <h1>
-            註冊/修改帳號專區
+            新增員工專區
         </h1>
         <div id="inputFields">
             <input placeholder="員工編號" id="code" class="cpw"></input>
             <input placeholder="密碼(身分證字號)" id="pw" class="cpw"></input>
             <input placeholder="員工姓名" id="name" class="cpw"></input>
             <span>到職日期:&nbsp;</span><input type="date" id="joinDate"></input>
-            <input placeholder="電子信箱" id="email" class="cpw"></input>
-            <h4>以下兩項可留白(預設為0天):</h4>
-            <input placeholder="已使用特休" id="usedDays" class="cpw"></input>
-            <input placeholder="其他請假天數" id="otherDays" class="cpw"></input>
-            <button id="start"  class="cpw">確認註冊/修改</button>
+            <input placeholder="電子信箱(非必要)" id="email" class="cpw"></input>
+            <button id="start"  class="cpw">確認新增</button>
     </body>
 </html>
