--- a/admin/admin.html
+++ b/admin/admin.html
@@ -8,8 +8,11 @@
 	</head>
     <body>
         <h1>
-            主管審核專區
+            主管審核區
         </h1>
-        
+	    <button>新增員工</button>
+	    <button>修改員工資訊</button>
+	    <button>已審核紀錄</button>
+	    
     </body>
 </html>
