--- a/admin/Correctionemployee.html
+++ b/admin/Correctionemployee.html
@@ -13,7 +13,7 @@
         </h1>
         <div id="inputFields">
             <input placeholder="員工編號" id="code" class="cpw"></input>
-            <button id=""  class="cpw">搜尋</button>
+            <button id=" "  class=" ">搜尋</button>
             <h4>以下為該員工的資訊:</h4>
             
             <table>
