--- a/admin/Addnewemployees.html
+++ b/admin/Addnewemployees.html
@@ -16,7 +16,7 @@
             <input placeholder="密碼(身分證字號)" id="pw" class="cpw"></input>
             <input placeholder="員工姓名" id="name" class="cpw"></input>
             <span>到職日期:&nbsp;</span><input type="date" id="joinDate"></input>
-            <input placeholder="電子信箱(非必要)" id="email" class="cpw"></input>
+            <input placeholder="電子信箱" id="email" class="cpw"></input>
             <button id="start"  class="cpw">確認新增</button>
     </body>
 </html>
