--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,12 +7,25 @@
 		<script src="../js/adminMain.js"></script>
 	</head>
     <body>
-        <h1>
+        
+		<h1>
             主管審核區
         </h1>
-	    <button>新增員工</button>
-	    <button>修改員工資訊</button>
-	    <button>已審核紀錄</button>
+		<a href = "../admin/Addnewemployees">
+			<button>新增員工</button>
+		</a>
+	    <a href = "../admin/Correctionemployee">
+			<button>修改員工資訊</button>
+		</a>
+	    <a href = "../admin/Leaverecord">
+			<button>已審核紀錄</button>
+		</a>
+		
+		
+		
+		<button>
+			匯出出勤紀錄表
+		</button>
 	    
     </body>
 </html>
