--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <script src="js/jquery-3.7.1.min.js"></script>
         <script src="js/loginPage.js"></script>
 		<title>祐肯請假系統</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
 		<link rel="stylesheet" href="./css/mainPage.css">
 		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
