--- a/admin/Addnewemployees.html
+++ b/admin/Addnewemployees.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>祐肯請假系統</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
 		<link rel="stylesheet" href="../css/register.css">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
