--- a/admin/Leaverecord.html
+++ b/admin/Leaverecord.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>已核准的價單</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
 
 
 
