--- a/admin/register.html
+++ b/admin/register.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>祐肯請假系統</title>
 		<link rel="stylesheet" href="../css/register.css">
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
 		<script src="../js/registerPage.js"></script>
