Fixed admin.html redirect problem

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -13,13 +13,13 @@
 		<h1>
             主管審核區
         </h1>
-		<a href = "../admin/Addnewemployees">
+		<a href = "../admin/Addnewemployees.html">
 			<button>新增員工</button>
 		</a>
-	    <a href = "../admin/Correctionemployee">
+	    <a href = "../admin/Correctionemployee.html">
 			<button>修改員工資訊</button>
 		</a>
-	    <a href = "../admin/Leaverecord">
+	    <a href = "../admin/Leaverecord.html">
 			<button>已審核紀錄</button>
 		</a>
 		
