--- a/admin/employeeDataModify.html
+++ b/admin/employeeDataModify.html
@@ -4,7 +4,7 @@
 		<title>祐肯請假系統</title>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="stylesheet" href="../css/register.css">
+		<link rel="stylesheet" href="../css/modifyEmployee.css">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
 		<script src="../js/registerPage.js"></script>
@@ -17,69 +17,70 @@
             <input placeholder="員工編號" id="code" class="cpw"></input>
             <button id="Search_employees">搜尋</button>
             <h4>以下為該員工的資訊:</h4>
-            
-            <table>
-                <tr>
-                    <td>特休假上限:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Special_leave_value" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之特休假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Special_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之事假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Personal_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之家庭照顧假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Family_care_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之普通傷病假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Injury_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之婚假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Marriage_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之喪假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Bereavement_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之分娩假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Childbirth_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之產檢假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Prenatal_check-up_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之流產假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Miscarriage_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之陪產假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Paternity_leave_Correction" class=""></input></td>
-                </tr>
-                <tr>
-                    <td>目前已請之產假:</td>
-                    <td> </td>
-                    <td><input placeholder="修改數值" id="Maternity_leave_Correction" class=""></input></td>
-                </tr>
-            </table>
+            <div id="info">
+                <table id="info">
+                    <tr>
+                        <td class="infoC">特休假上限:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Special_leave_value" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之特休假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Special_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之事假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Personal_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之家庭照顧假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Family_care_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之普通傷病假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Injury_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之婚假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Marriage_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之喪假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Bereavement_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之分娩假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Childbirth_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之產檢假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Prenatal_check-up_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之流產假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Miscarriage_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之陪產假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Paternity_leave_Correction" class=""></input></td>
+                    </tr>
+                    <tr>
+                        <td class="infoC">目前已請之產假:</td>
+                        <!-- <td> </td> -->
+                        <td class="infoInp"><input placeholder="修改數值" id="Maternity_leave_Correction" class=""></input></td>
+                    </tr>
+                </table>
+            </div>
             <button id="Modify_leave_value"  class="cpw">確認修改</button>
     </body>
 </html>
