--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,6 +6,7 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/cookieOperation.js"></script>
 		<script src="../js/adminMain.js"></script>
 	</head>
     <body>
