--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/cookieOperation.js"></script>
         <script src="js/loginPage.js"></script>
 		<title>祐肯請假系統</title>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
