--- a/admin/employeeDataModify.html
+++ b/admin/employeeDataModify.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../css/modifyEmployee.css">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/cookieOperation.js"></script>
 		<script src="../js/registerPage.js"></script>
 	</head>
     <body>
