--- a/employee/employee.html
+++ b/employee/employee.html
@@ -8,6 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/cookieOperation.js"></script>
 		<script src="../js/employeePage.js"></script>
 	</head>
     <body>
