register employee account

--- a/admin/Addnewemployees.html
+++ b/admin/Addnewemployees.html
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-		<script src="../js/registerPage.js"></script>
+		<script src="../js/newEmp.js"></script>
 	</head>
     <body>
         <h1>
@@ -20,6 +20,7 @@
             <input placeholder="員工姓名" id="name" class="cpw"></input>
             <span>到職日期:&nbsp;</span><input type="date" id="joinDate" class="cpw"></input>
             <input placeholder="電子信箱" id="email" class="cpw"></input>
+            <input placeholder="主管類型" id="mgroup" class="cpw"></input>
             <button id="confirm"  class="cpw">確認新增</button>
         </div>
     </body>
