--- a/admin/register.html
+++ b/admin/register.html
@@ -23,6 +23,6 @@
             <h4>以下兩項可留白(預設為0天):</h4>
             <input placeholder="已使用特休" id="usedDays" class="cpw"></input>
             <input placeholder="其他請假天數" id="otherDays" class="cpw"></input>
-            <button id="start"  class="cpw">確認註冊/修改</button>
+            <button id="confirm"  class="cpw">確認註冊/修改</button>
     </body>
 </html>
