--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,12 +23,10 @@
 	    <a href = "../admin/dayOffRecord.html">
 			<button>已審核紀錄</button>
 		</a>
-		
-		
-		
-		<button>
-			匯出出勤紀錄表
-		</button>
+		<a href = "../admin/calendar.html">
+			<button>行事曆</button>
+		</a>
+	
 	    
     </body>
 </html>
