--- a/employee/employee.html
+++ b/employee/employee.html
@@ -17,7 +17,7 @@
 				員工請假專區
 			</h1>
 			<div class="btndiv" id="viewDataDiv">
-				<p>查看請假紀錄</p><br>
+				<p>請假紀錄</p><br>
 				<button class="menubtn" id="viewdata">
 					<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
 				</button>
@@ -27,6 +27,16 @@
 				<button class="menubtn" id="newdayoff">
 					<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
 				</button>
+			</div>
+			<div id = "worker_calendar">
+				<a href="../employee/worker_calender.html">
+					<button>員工行事曆</button>
+				</a>
+			</div>
+			<div id="Check_in">
+				<a href="../employee/Check_in.html">
+					<button>打卡</button>
+				</a>
 			</div>
 		</div>
     </body>
