--- a/admin/admin.html
+++ b/admin/admin.html
@@ -8,6 +8,7 @@
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<script src="../js/adminMain.js"></script>
+		<link rel="stylesheet" href="../css/admin.css">
 	</head>
     <body>
         
