--- a/admin/admin.html
+++ b/admin/admin.html
@@ -13,19 +13,19 @@
     <body>
         
 		<h1>
-            主管審核區
+            請假系統管理平台
         </h1>
-		<a href = "../admin/addNewEmployees.html">
-			<button>新增員工</button>
+		<a href = "../admin/員工資料維護.html">
+			<button>員工資料維護</button>
 		</a>
-	    <a href = "../admin/employeeDataModify.html">
-			<button>修改員工資訊</button>
+	    <a href = "../admin/員工請假資訊.html">
+			<button>員工請假資訊</button>
 		</a>
-	    <a href = "../admin/dayOffRecord.html">
-			<button>已審核紀錄</button>
+	    <a href = "../admin/假單審核紀錄.html">
+			<button>假單審核紀錄</button>
 		</a>
-		<a href = "../admin/calendar.html">
-			<button>行事曆</button>
+		<a href = "../admin/休假行事曆.html">
+			<button>休假行事曆</button>
 		</a>
 	
 	    
