--- a/admin/employeeDataModify.html
+++ b/admin/employeeDataModify.html
@@ -12,7 +12,7 @@
 	</head>
     <body>
         <h1>
-            修改員工專區
+            查詢員工請假時數
         </h1>
         <div id="inputFields">
             <input placeholder="員工編號" id="code" class="cpw"></input>
