--- a/admin/員工請假資訊.html
+++ b/admin/員工請假資訊.html
@@ -7,6 +7,7 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
         <link rel="stylesheet" href="../css/員工請假資訊.css">
     </head>
 
@@ -24,7 +25,7 @@
                 <thead>
                     <tr>
                         <th align="left">當年度特休天數</th>
-                        <td><output id="當年度特休天數"></output></td>
+                        <td align="right"><output id="當年度特休天數"></output></td>
                     </tr>
                     <tr>
                         <th>假別</th>
@@ -36,40 +37,44 @@
                 <tbody>
                     <tr>
                         <th align="left">特休假</th>
-                        <td><output id="特休假"></output></td>
+                        <td align="right"><output id="特休假"></output></td>
                         <th align="left">分娩假</th>
-                        <td><output id="分娩假"></output></td>
+                        <td align="right"><output id="分娩假"></output></td>
                     </tr>
                     <tr>
                         <th align="left">事假</th>
-                        <td><output id="事假"></output></td>
+                        <td align="right"><output id="事假"></output></td>
                         <th align="left">產檢假</th>
-                        <td><output id="產檢假"></output></td>
+                        <td align="right"><output id="產檢假"></output></td>
                     </tr>
                     <tr>
                         <th align="left">家庭照顧假</th>
-                        <td><oupt id="家庭照顧假"></oupt></td>
+                        <td align="right"><oupt id="家庭照顧假"></oupt></td>
                         <th align="left">流產假</th>
-                        <td><output id="流產假"></output></td>
+                        <td align="right"><output id="流產假"></output></td>
                     </tr>
                     <tr>
                         <th align="left">普通傷病假</th>
-                        <td><output id="普通傷病假"></output></td>
+                        <td align="right"><output id="普通傷病假"></output></td>
                         <th align="left">陪產假</th>
-                        <td><output id="陪產假"></output></td>
+                        <td align="right"><output id="陪產假"></output></td>
                     </tr>
                     <tr>
                         <th align="left">婚假</th>
-                        <td><output id="婚假"></output></td>
+                        <td align="right"><output id="婚假"></output></td>
                         <th align="left">產假</th>
-                        <td><output id="產假"></output></td>
+                        <td align="right"><output id="產假"></output></td>
                     </tr>
                     <tr>
                         <th align="left">喪假</th>
-                        <td><output id="喪假"></output></td>
+                        <td align="right"><output id="喪假"></output></td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div id="version">
+            <p>Version: Alpha 0.1.0</p>
+            <p>system builder : 張凱昱 吳岱威</p>
         </div>
     </body>
 </html>
