--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="./css/mainPage.css">
 		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<img src="../img/logo.png" style="position: fixed;right: 1%;top:1%;width: 15%;">
     </head>
 	<body>
 		<div class="fullscreen">
@@ -29,6 +30,7 @@
 			</div>
 			<div id="version">
 				<p>Version: Alpha 0.1.0</p>
+				<p>system builder : 張凱昱 吳岱威</p>
 			</div>
 		</div>
 	</body>
