--- a/admin/員工請假資訊.html
+++ b/admin/員工請假資訊.html
@@ -13,68 +13,75 @@
 
     <body>
         <h1>查詢員工請假時數</h1>
-        <div id="search" class="search">
-            <input placeholder="員工編號" id="code" class="button">
-            <input placeholder="年度" id="year" class="button">
-            <br>
-            <button id="search" class="button">搜尋</button>
+        <div id="search">
+            <input placeholder="員工編號" id="code" class="search">
+            <input placeholder="年度" id="year" class="search">
+            <button id="searching" class="button">搜尋</button>
         </div>
-        <br>
         <div id="info" class="info">
-            <table  style="font-size: 40px;">
+            <table>
                 <thead>
                     <tr>
-                        <th align="left">當年度特休天數</th>
-                        <td align="right"><output id="當年度特休天數"></output></td>
+                        <th>當年度特休天數</th>
+                        <td><output id="當年度特休天數"></output></td>
                     </tr>
                     <tr>
-                        <th>假別</th>
-                        <th>時數</th>
                         <th>假別</th>
                         <th>時數</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th align="left">特休假</th>
-                        <td align="right"><output id="特休假"></output></td>
-                        <th align="left">分娩假</th>
-                        <td align="right"><output id="分娩假"></output></td>
+                        <th>特休假</th>
+                        <td><output id="特休假"></output></td>
                     </tr>
                     <tr>
-                        <th align="left">事假</th>
-                        <td align="right"><output id="事假"></output></td>
-                        <th align="left">產檢假</th>
-                        <td align="right"><output id="產檢假"></output></td>
+                        <th>事假</th>
+                        <td><output id="事假"></output></td>
                     </tr>
                     <tr>
-                        <th align="left">家庭照顧假</th>
-                        <td align="right"><oupt id="家庭照顧假"></oupt></td>
-                        <th align="left">流產假</th>
-                        <td align="right"><output id="流產假"></output></td>
+                        <th>家庭照顧假</th>
+                        <td><oupt id="家庭照顧假"></oupt></td>
                     </tr>
                     <tr>
-                        <th align="left">普通傷病假</th>
-                        <td align="right"><output id="普通傷病假"></output></td>
-                        <th align="left">陪產假</th>
-                        <td align="right"><output id="陪產假"></output></td>
+                        <th>普通傷病假</th>
+                        <td><output id="普通傷病假"></output></td>
                     </tr>
                     <tr>
-                        <th align="left">婚假</th>
-                        <td align="right"><output id="婚假"></output></td>
-                        <th align="left">產假</th>
-                        <td align="right"><output id="產假"></output></td>
+                        <th>婚假</th>
+                        <td><output id="婚假"></output></td>
                     </tr>
                     <tr>
-                        <th align="left">喪假</th>
-                        <td align="right"><output id="喪假"></output></td>
+                        <th>喪假</th>
+                        <td><output id="喪假"></output></td>
+                    </tr>
+                    <tr>
+                        <th>分娩假</th>
+                        <td><output id="分娩假"></output></td>
+                    </tr>
+                    <tr>
+                        <th>產檢假</th>
+                        <td><output id="產檢假"></output></td>
+                    </tr>
+                    <tr>
+                        <th>流產假</th>
+                        <td><output id="流產假"></output></td>
+                    </tr>
+                    <tr>
+                        <th>陪產假</th>
+                        <td><output id="陪產假"></output></td>
+                    </tr>
+                    <tr>
+                        <th>產假</th>
+                        <td><output id="產假"></output>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <div id="version">
             <p>Version: Alpha 0.1.0</p>
-            <p>system builder : 張凱昱 吳岱威</p>
+            <p>system builder : 章凱昱 吳岱威</p>
         </div>
     </body>
 </html>
