--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="version">
 				<p>Version: Alpha 0.1.0</p>
-				<p>system builder : 張凱昱 吳岱威</p>
+				<p>system builder : 章凱昱 吳岱威</p>
 			</div>
 		</div>
 	</body>
