--- a/admin/admin.html
+++ b/admin/admin.html
@@ -27,7 +27,9 @@
 		<a href = "../admin/休假行事曆.html">
 			<button>休假行事曆</button>
 		</a>
-	
-	    
+		<div id="version">
+            <p>Version: Alpha 0.1.0</p>
+            <p>system builder : 章凱昱 吳岱威</p>
+        </div>
     </body>
 </html>
