--- a/admin/員工資料維護.html
+++ b/admin/員工資料維護.html
@@ -29,7 +29,7 @@
         </div>
         <div id="version">
             <p>Version: Alpha 0.1.0</p>
-            <p>system builder : 張凱昱 吳岱威</p>
+            <p>system builder : 章凱昱 吳岱威</p>
         </div>
     </body>
 </html>
