--- a/admin/addEmployee.html
+++ b/admin/addEmployee.html
@@ -8,7 +8,9 @@
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<link rel="stylesheet" href="../css/addEmp.css">
-		<script src="../js/newEmp.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<!-- <script src="../js/newEmp.js"></script> -->
 	</head>
     <body>
         <h1>
