--- a/admin/admin.html
+++ b/admin/admin.html
@@ -8,6 +8,7 @@
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<script src="../js/adminMain.js"></script>
+		<img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
 		<link rel="stylesheet" href="../css/admin.css">
 	</head>
     <body>
@@ -16,16 +17,17 @@
             請假系統管理平台
         </h1>
 		<a href = "../admin/員工資料維護.html">
-			<button>員工資料維護</button>
+			<button class="button">員工資料維護</button>
 		</a>
 	    <a href = "../admin/員工請假資訊.html">
-			<button>員工請假資訊</button>
+			<button class="button">員工請假資訊</button>
 		</a>
+		<br>
 	    <a href = "../admin/假單審核紀錄.html">
-			<button>假單審核紀錄</button>
+			<button class="button">假單審核紀錄</button>
 		</a>
 		<a href = "../admin/休假行事曆.html">
-			<button>休假行事曆</button>
+			<button class="button">休假行事曆</button>
 		</a>
 		<div id="version">
             <p>Version: Alpha 0.1.0</p>
