--- a/admin/休假行事曆.html
+++ b/admin/休假行事曆.html
@@ -7,6 +7,14 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;"> 
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+        <link rel="stylesheet" href="../css/休假行事曆.css"> 
     </head>
+    <body>
+        <h1>休假行事曆</h1>
+        <div id="version">
+            <p>Version: Alpha 0.1.0</p>
+            <p>system builder : 章凱昱 吳岱威</p>
+        </div>
+    </body>
 </html>
