--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,8 +23,8 @@
 			<button class="button">員工請假資訊</button>
 		</a>
 		<br>
-	    <a href = "../admin/假單審核紀錄.html">
-			<button class="button">假單審核紀錄</button>
+	    <a href = "../admin/假單審核.html">
+			<button class="button">假單審核</button>
 		</a>
 		<a href = "../admin/休假行事曆.html">
 			<button class="button">休假行事曆</button>
