--- a/admin/員工請假資訊.html
+++ b/admin/員工請假資訊.html
@@ -27,7 +27,7 @@
                     </tr>
                     <tr>
                         <th>假別</th>
-                        <th>時數</th>
+                        <th id="time">時數</th>
                     </tr>
                 </thead>
                 <tbody>
