--- a/admin/員工資料維護.html
+++ b/admin/員工資料維護.html
@@ -14,12 +14,12 @@
         <div>
             <h1 style="font-size: 50px;">員工資料維護</h1>
             <input placeholder="員工編號" id="code" class="cpw"></input>
-            <input placeholder="密碼(身分證字號)" id="pwd" class="cpw"></input>
+            <input placeholder="身分證字號" id="pwd" class="cpw"></input>
             <input placeholder="員工姓名" id="name" class="cpw"></input>
             <span class="cpw">到職日期:&nbsp;</span>
             <input type="date" id="joinDate" class="cpw"></input>
             <input placeholder="電子信箱" id="email" class="cpw"></input>
-            <input placeholder="主管類型" id="mgroup" class="cpw"></input>
+            <input placeholder="直屬主管" id="mgroup" class="cpw"></input>
             <select id="審核確認" class="cpw">
                 <option>請假是否需要審核</option>
                 <option id="true">需要審核</option>
