--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -18,7 +18,7 @@
                     <tr>
                         <th>員工姓名</th>
                         <td>2024/12/15/09:00-2024/12/15/19:00</td>
-                        <td><button>不准</button></td>
+                        <td><button>拒絕</button></td>
                         <td><button>核准</button></td>
                     </tr>
                 </table>
