--- a/admin/員工資料維護.html
+++ b/admin/員工資料維護.html
@@ -9,6 +9,7 @@
         <script src="../js/cookieOperation.js"></script>
         <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;"> 
         <link rel="stylesheet" href="../css/員工資料維護.css">
+        <script src="../js/新增員工.js"></script>
     </head>
     <body>
         <div>
