--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -17,11 +17,18 @@
                 <table>
                     <tr>
                         <th>員工姓名</th>
+                    </tr>
+                    <tr>
                         <td>2024/12/15/09:00-2024/12/15/19:00</td>
+                    </tr>
+                    <tr>
                         <td>假別</td>
+                    </tr>
+                    <tr>
                         <td>事由</td>
-                        <td><button>拒絕</button></td>
-                        <td><button>核准</button></td>
+                    </tr>
+                    <tr>
+                        <td><button>拒絕</button><button>核准</button></td>
                     </tr>
                 </table>
             </div>
