--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -28,7 +28,7 @@
                         <td>事由</td>
                     </tr>
                     <tr>
-                        <td><button>拒絕</button><button>核准</button></td>
+                        <td id="button"><button>拒絕</button><button>核准</button></td>
                     </tr>
                 </table>
             </div>
