--- a/employee/viewdata.html
+++ b/employee/viewdata.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
-
-    <head>
+	<head>
 		<title>祐肯請假系統</title>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-    </head>
-
-    <body>
-        <div id="punch_card">
-            <button>上班打卡</button>
-        </div>
-        <div id="Clock_in_after_get_off_work">
-            <button>下班打卡</button>
-        </div>
-    </body>
+		<link rel="stylesheet" href="style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="script.js"></script>
+	</head>
+	<body>
+		<div id="full">
+			<h1>
+				員工請假專區
+			</h1>
+		</div>
+		 
+		 <br>
+	   	 <button onclick="goback()">
+			返回請假專區
+		</button>
+  	</body>
 </html>
