remove old method

--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -56,12 +56,12 @@
 		<input id = "prove" type = "file">
 		<br>
 		<br>
-		<button onclick=" ">
+		<button id="confirm">
 			確定請假
 		</button>
 		<br>
 		<br>
-		<button onclick="goback()">
+		<button id="back">
 			返回請假專區
 		</button>
 
