--- a/employee/employeeTemp.html
+++ b/employee/employeeTemp.html
@@ -13,13 +13,13 @@
 	</h1>
 	<div class="btndiv" id="viewDataDiv">
 		<p>查看請假紀錄</p><br>
-		<button class="menubtn" id="viewdata" onclick="viewData()" >
+		<button class="menubtn" id="viewdata">
 			<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
 		</button>
 	</div>
 	<div class="btndiv" id="newDayOffDiv">
 		<p>請假</p><br>
-		<button class="menubtn" id="newdayoff" onclick="newdayoff()">
+		<button class="menubtn" id="newdayoff">
 			<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
 		</button>
 </div>
