--- a/employee/checkin.html
+++ b/employee/checkin.html
@@ -10,10 +10,10 @@
     </head>
 
     <body>
-        <div id="punch_card">
+        <div id="start_work">
             <button>上班打卡</button>
         </div>
-        <div id="Clock_in_after_get_off_work">
+        <div id="off_work">
             <button>下班打卡</button>
         </div>
     </body>
