--- a/employee/employee.html
+++ b/employee/employee.html
@@ -10,21 +10,23 @@
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<script src="../js/employeePage.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
     <body>
 		<div id="full">
 			<h1>
 				員工請假專區
 			</h1>
-			<div class="btndiv" id="viewDataDiv">
-				<p>請假紀錄</p><br>
+			<div class="btndiv w3-card w3-border" id="viewDataDiv">
 				<button class="menubtn" id="viewdata">
+					<span>請假紀錄</span>
 					<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
 				</button>
 			</div>
-			<div class="btndiv" id="newDayOffDiv">
-				<p>請假</p><br>
+			<div class="btndiv w3-card w3-border" id="newDayOffDiv">
 				<button class="menubtn" id="newdayoff">
+					<span>請假</span>
 					<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
 				</button>
 			</div>
