redirect to newdayoff page

--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>祐肯請假系統</title>
+		<link rel="stylesheet" href="../css/employee.css">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
+		<title>祐肯請假系統</title>
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
+		<script src="../js/newDayoffPage.js"></script>
 	</head>
 	
 	<body>
 
 		<h1>員工請假專區</h1>
 
-		<div id = "Choose_a_vacation">
+		<div id = "type">
 			<select>
 				<option>選擇假別</option>
 				<option>特休假</option>
