--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -15,54 +15,53 @@
 	<body>
 
 		<h1>員工請假專區</h1>
+		<form action="http://eucan.ddns.net:3000/upload" method="post" enctype="multipart/form-data">
+			<div id="dayofftype">
+				<select name="type">
+					<option>選擇假別</option>
+					<option>特休假</option>
+					<option>事假</option>
+					<option>家庭照顧假</option>
+					<option>普通傷病假</option>
+					<option>婚假</option>
+					<option>喪假</option>
+					<option>分娩假</option>
+					<option>產檢假</option>
+					<option>流產假</option>
+					<option>陪產假</option>
+					<option>產假</option>
+				</select>
+			</div>
+			<div id="start">
+				<p>
+					輸入請假開始的時間
+				</p>
+				<input name="startTime" type="datetime-local" />
+			</div>
 
-		<div id = "type">
-			<select>
-				<option>選擇假別</option>
-				<option>特休假</option>
-				<option>事假</option>
-				<option>家庭照顧假</option>
-				<option>普通傷病假</option>
-				<option>婚假</option>
-				<option>喪假</option>
-				<option>分娩假</option>
-				<option>產檢假</option>
-				<option>流產假</option>
-				<option>陪產假</option>
-				<option>產假</option>
-			</select>
-		</div>
+			<div id="end">
+				<p>
+					輸入請假結束時間
+				</p>
+				<input name="endTime" type="datetime-local" />
+			</div>
 
-		<div id="start">
+			<br>
+
+			<div id = "reason">
+				<input name="reason" type="text" placeholder = "輸入事由" />
+			</div>
+
 			<p>
-				輸入請假開始的時間
+				上傳請假證明
 			</p>
-			<input id="startTime" type="datetime-local" />
-		</div>
-
-		<div id="end">
-			<p>
-				輸入請假結束時間
-			</p>
-			<input id="endTime" type="datetime-local" />
-		</div>
-
-		<br>
-
-		<div id = "reason">
-			<input id="reason" type="text" placeholder = "輸入事由" />
-		</div>
-
-		<p>
-			上傳請假證明
-		</p>
-		<input id = "prove" type = "file">
-		<br>
-		<br>
-		<button id="confirm">
-			確定請假
-		</button>
-		<br>
+			<input name = "file" type = "file">
+			<br>
+			<br>
+			<button type="submit">
+				確定請假
+			</button>
+		</form>
 		<br>
 		<button id="back">
 			返回請假專區
