removed file upload and modify css

--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/employee.css">
+		<link rel="stylesheet" href="../css/newDayoff.css">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<title>祐肯請假系統</title>
@@ -52,11 +52,10 @@
 				<input name="reason" type="text" placeholder = "輸入事由" />
 			</div>
 
-			<p>
+			<!-- <p>
 				上傳請假證明
 			</p>
-			<input name = "file" type = "file">
-			<br>
+			<input name = "file" type = "file"> -->
 			<br>
 			<button type="submit">
 				確定請假
