/upload is deprecated, changed to /request

--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -15,7 +15,7 @@
 	<body>
 
 		<h1>員工請假專區</h1>
-		<form action="http://eucan.ddns.net:3000/upload" method="post" enctype="multipart/form-data">
+		<form action="http://eucan.ddns.net:3000/request" method="post" enctype="multipart/form-data">
 			<div id="dayofftype">
 				<select name="type">
 					<option>選擇假別</option>
