--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -57,6 +57,8 @@
 			</p>
 			<input name = "file" type = "file"> -->
 			<br>
+			<input type="hidden" id="acc" name="account" />
+			<input type="hidden" id="sess" name="cookie" />
 			<button type="submit">
 				確定請假
 			</button>
