--- a/employee/newdayoff.html
+++ b/employee/newdayoff.html
@@ -36,14 +36,14 @@
 				<p>
 					輸入請假開始的時間
 				</p>
-				<input name="startTime" type="datetime-local" />
+				<input name="start" type="datetime-local" />
 			</div>
 
 			<div id="end">
 				<p>
 					輸入請假結束時間
 				</p>
-				<input name="endTime" type="datetime-local" />
+				<input name="end" type="datetime-local" />
 			</div>
 
 			<br>
