--- a/employee/viewdata.html
+++ b/employee/viewdata.html
@@ -17,10 +17,9 @@
 				員工請假專區
 			</h1>
 		</div>
-		 
 		 <br>
-	   	 <button id="back">
-			返回請假專區
-		</button>
+		 <a href="../employee/employee.html">
+			<button>返回</button>
+		 </a>
   	</body>
 </html>
