--- a/employee/checkin.html
+++ b/employee/checkin.html
@@ -16,5 +16,8 @@
         <div id="off_work">
             <button>下班打卡</button>
         </div>
+        <a href="../employee/employee.html">
+			<button>返回</button>
+		 </a>
     </body>
 </html>
